--- a/game.html
+++ b/game.html
@@ -21,7 +21,7 @@
     <div id="buttons" class="flex-centered">
         <img src="./assets/Numeron_plus.png" alt="" id="plus">
         <img src="./assets/Numeron_minus.png" alt="" id="minus">
-        <img src="./assets/Numeron_mul.png" alt="" id="mul">
+        <img src="./assets/Numeron_mul.png" alt="" id="multiply">
         <img src="./assets/Numeron_div.png" alt="" id="divide">
         <img src="./assets/Numeron_per.png" alt="" id="modulus">
     </div>
